--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 $(document).ready(function(){
 str="20";
   $("button").click(function(){
-    $.post("http://localhost:8080/addUser",
+    $.post("/addUser",
     {
   "id": "5"
 },
